--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express":"^4.18.2",
-    "path":"^0.12.7"
+    "express": "^4.18.2",
+    "path": "^0.12.7"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "async": "^3.2.4"
+  }
 }
