--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "async": "^3.2.4"
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "async": "^3.2.4",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.2.5",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
