--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "async": "^3.2.4",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
